Downgraded to Java 8. Closes #53 (#54)
* - Downgraded to Java 8
* - oracle jdk is removed from travis config

Co-authored-by: YevhenIkonnykov <y.ikonnykov@rheagroup.com>