@@ -36,11 +36,13 @@ import static org.mockito.Mockito.when;
 
 import cdp4common.commondata.ClassKind;
 import cdp4common.commondata.Thing;
+import cdp4common.dto.Alias;
 import cdp4common.dto.EngineeringModelSetup;
 import cdp4common.dto.Iteration;
 import cdp4common.dto.IterationSetup;
 import cdp4common.engineeringmodeldata.EngineeringModel;
 import cdp4common.sitedirectorydata.DomainOfExpertise;
+import cdp4common.sitedirectorydata.ModelReferenceDataLibrary;
 import cdp4common.sitedirectorydata.Participant;
 import cdp4common.sitedirectorydata.Person;
 import cdp4common.sitedirectorydata.SiteDirectory;
@@ -54,6 +56,7 @@ import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.collect.MoreCollectors;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -75,7 +78,7 @@ class JsonFileDalTest {
 
   @BeforeEach
   void setup() {
-    var path = Path.of("src/test/java/cdp4jsonfiledal/files/LOFT_ECSS-E-TM-10-25_AnnexC.zip");
+    Path path = Paths.get("src/test/java/cdp4jsonfiledal/files/LOFT_ECSS-E-TM-10-25_AnnexC.zip");
     this.cancelled = new AtomicBoolean();
 
     this.credentials = new Credentials("admin", "pass", path.toUri(), null);
@@ -97,24 +100,24 @@ class JsonFileDalTest {
 
   @Test
   void verifyCacheIsPresentOnOperationThing() {
-    var container = new EngineeringModel();
+    EngineeringModel container = new EngineeringModel();
     container.setIid(UUID.randomUUID());
-    var iterationPojo = new cdp4common.engineeringmodeldata.Iteration();
+    cdp4common.engineeringmodeldata.Iteration iterationPojo = new cdp4common.engineeringmodeldata.Iteration();
     iterationPojo.setIid(UUID.randomUUID());
     iterationPojo.setContainer(container);
     iterationPojo.setCache(CacheBuilder.newBuilder().build());
-    var iterationDto = iterationPojo.toDto();
+    cdp4common.dto.Thing iterationDto = iterationPojo.toDto();
 
     assertNotNull(iterationDto.querySourceThing());
 
-    var operation = new Operation(iterationDto, iterationDto, OperationKind.CREATE);
+    Operation operation = new Operation(iterationDto, iterationDto, OperationKind.CREATE);
     assertNotNull(JsonFileDal.getAssociatedCache(operation));
   }
 
   @Test
   void verifyCacheRetrievalThrowsExceptionIfSourceThingMissing() {
-    var iterationDto = new cdp4common.dto.Iteration();
-    var operation = new Operation(iterationDto, iterationDto, OperationKind.CREATE);
+    Iteration iterationDto = new cdp4common.dto.Iteration();
+    Operation operation = new Operation(iterationDto, iterationDto, OperationKind.CREATE);
 
     assertThrows(IllegalStateException.class, () -> JsonFileDal.getAssociatedCache(operation));
   }
@@ -122,20 +125,20 @@ class JsonFileDalTest {
   @Test
   @Tag("AppVeyorExclusion")
   void verifyThatOpenCreatesAConnection() {
-    var returned = this.dal.open(this.credentials, this.cancelled).join();
+    List<cdp4common.dto.Thing> returned = this.dal.open(this.credentials, this.cancelled).join();
     assertNotNull(returned);
     assertFalse(returned.isEmpty());
   }
 
   @Test
   void verifyThatUpdateThrowsException() {
-    var alias = new cdp4common.dto.Alias();
+    Alias alias = new cdp4common.dto.Alias();
     assertThrows(UnsupportedOperationException.class, () -> this.dal.update(alias));
   }
 
   @Test
   void verifyThatDeleteThrowsException() {
-    var alias = new cdp4common.dto.Alias();
+    Alias alias = new cdp4common.dto.Alias();
     assertThrows(UnsupportedOperationException.class, () -> this.dal.delete(alias));
   }
 
@@ -148,18 +151,18 @@ class JsonFileDalTest {
   @Test
   @Tag("AppVeyorExclusion")
   void verifyThatReadReturnsCorrectDTO() {
-    var returned = this.dal.open(this.credentials, this.cancelled).join();
+    List<cdp4common.dto.Thing> returned = this.dal.open(this.credentials, this.cancelled).join();
 
     assertNotNull(returned);
     assertFalse(returned.isEmpty());
 
     // read info from the open call
-    var engineeringModelSetupDto = returned.stream()
+    EngineeringModelSetup engineeringModelSetupDto = returned.stream()
         .filter(d -> d.getClassKind() == ClassKind.EngineeringModelSetup)
         .map(x -> (EngineeringModelSetup) x)
         .collect(MoreCollectors.onlyElement());
 
-    var iterationSetupDto = returned.stream()
+    IterationSetup iterationSetupDto = returned.stream()
         .filter(d -> d.getClassKind() == ClassKind.IterationSetup)
         .map(x -> (IterationSetup) x)
         .findFirst().orElse(null);
@@ -168,12 +171,12 @@ class JsonFileDalTest {
     assertNotNull(iterationSetupDto);
 
     // setup expected SiteDirectory instance
-    var iterationSetupData = new cdp4common.sitedirectorydata.IterationSetup();
+    cdp4common.sitedirectorydata.IterationSetup iterationSetupData = new cdp4common.sitedirectorydata.IterationSetup();
     iterationSetupData.setIterationIid(iterationSetupDto.getIterationIid());
-    var modelRdlData = new cdp4common.sitedirectorydata.ModelReferenceDataLibrary();
+    ModelReferenceDataLibrary modelRdlData = new cdp4common.sitedirectorydata.ModelReferenceDataLibrary();
     modelRdlData.setIid(
         engineeringModelSetupDto.getRequiredRdl().stream().collect(MoreCollectors.onlyElement()));
-    var engineeringModelSetupData = new cdp4common.sitedirectorydata.EngineeringModelSetup();
+    cdp4common.sitedirectorydata.EngineeringModelSetup engineeringModelSetupData = new cdp4common.sitedirectorydata.EngineeringModelSetup();
     engineeringModelSetupData
         .setEngineeringModelIid(engineeringModelSetupDto.getEngineeringModelIid());
 
@@ -181,15 +184,15 @@ class JsonFileDalTest {
     engineeringModelSetupData.getIterationSetup().add(iterationSetupData);
     this.siteDirectoryData.getModel().add(engineeringModelSetupData);
 
-    var iterObject = new cdp4common.dto.Iteration();
+    Iteration iterObject = new cdp4common.dto.Iteration();
     iterObject.setIid(iterationSetupDto.getIterationIid());
 
-    var readResult = this.dal.read(iterObject, this.cancelled, null).join();
+    List<cdp4common.dto.Thing> readResult = this.dal.read(iterObject, this.cancelled, null).join();
 
     // General assertions for any kind of Thing we read
     assertNotNull(readResult);
     assertTrue(readResult.size() != 1);
-    var iter1 = readResult.stream()
+    cdp4common.dto.Thing iter1 = readResult.stream()
         .filter(d -> d.getClassKind() == ClassKind.Iteration)
         .collect(MoreCollectors.onlyElement());
 
@@ -199,7 +202,7 @@ class JsonFileDalTest {
 
   @Test
   void verifyThatReadWithNonIterationInstanceSuppliedThrowsException() {
-    var alias = new cdp4common.dto.Alias();
+    Alias alias = new cdp4common.dto.Alias();
 
     // CompletableFuture wraps all execution exceptions as ExecutionException
     try {
@@ -213,7 +216,7 @@ class JsonFileDalTest {
 
   @Test
   void verifyThatWriteAsyncOperationContainerThrowsException() {
-    var operationContainer = new OperationContainer(
+    OperationContainer operationContainer = new OperationContainer(
         "/SiteDirectory/47363f0d-eb6d-4a58-95f5-fa7854995650", 1);
 
     assertThrows(UnsupportedOperationException.class,
@@ -224,22 +227,22 @@ class JsonFileDalTest {
   void verifyWriteEnumerableOperationContainer() {
     Cache<CacheKey, Thing> cache = CacheBuilder.newBuilder().build();
 
-    var files = Arrays.asList("file1");
+    List<String> files = Arrays.asList("file1");
     assertThrows(NullPointerException.class,
         () -> this.dal.write((List<OperationContainer>) null, files));
     assertThrows(IllegalArgumentException.class, () -> this.dal.write(new ArrayList<>(), files));
 
-    var operationContainers = Arrays
+    List<OperationContainer> operationContainers = Arrays
         .asList(new OperationContainer("/SiteDirectory/00000000-0000-0000-0000-000000000000", 0));
     assertThrows(IllegalArgumentException.class, () -> this.dal.write(operationContainers, files));
 
-    var domain = new DomainOfExpertise(UUID.randomUUID(), cache, this.credentials.getUri());
+    DomainOfExpertise domain = new DomainOfExpertise(UUID.randomUUID(), cache, this.credentials.getUri());
     domain.setShortName("SYS");
     this.siteDirectoryData.getDomain().add(domain);
 
-    var sitedirectoryDto = (cdp4common.dto.SiteDirectory) this.siteDirectoryData.toDto();
-    var clone = sitedirectoryDto.deepClone(cdp4common.dto.SiteDirectory.class);
-    var operation = new Operation(sitedirectoryDto, clone, OperationKind.UPDATE);
+    cdp4common.dto.SiteDirectory sitedirectoryDto = (cdp4common.dto.SiteDirectory) this.siteDirectoryData.toDto();
+    cdp4common.dto.SiteDirectory clone = sitedirectoryDto.deepClone(cdp4common.dto.SiteDirectory.class);
+    Operation operation = new Operation(sitedirectoryDto, clone, OperationKind.UPDATE);
     assertEquals(0,
         operationContainers.stream().collect(MoreCollectors.onlyElement()).getOperations().size());
     operationContainers.stream().collect(MoreCollectors.onlyElement()).addOperation(operation);
@@ -252,31 +255,31 @@ class JsonFileDalTest {
     assertEquals(0,
         operationContainers.stream().collect(MoreCollectors.onlyElement()).getOperations().size());
 
-    var iterationIid = UUID.fromString("b58ea73d-350d-4520-b9d9-a52c75ac2b5d");
-    var iterationSetup = new IterationSetup(UUID.randomUUID(), 0);
-    var iterationSetupPojo = new cdp4common.sitedirectorydata.IterationSetup(
+    UUID iterationIid = UUID.fromString("b58ea73d-350d-4520-b9d9-a52c75ac2b5d");
+    IterationSetup iterationSetup = new IterationSetup(UUID.randomUUID(), 0);
+    cdp4common.sitedirectorydata.IterationSetup iterationSetupPojo = new cdp4common.sitedirectorydata.IterationSetup(
         iterationSetup.getIid(), cache, this.credentials.getUri());
-    var model = new EngineeringModel(UUID.randomUUID(), cache, this.credentials.getUri());
-    var modelSetup = new cdp4common.sitedirectorydata.EngineeringModelSetup();
+    EngineeringModel model = new EngineeringModel(UUID.randomUUID(), cache, this.credentials.getUri());
+    cdp4common.sitedirectorydata.EngineeringModelSetup modelSetup = new cdp4common.sitedirectorydata.EngineeringModelSetup();
     modelSetup.getActiveDomain().add(domain);
     modelSetup.setIid(UUID.fromString("00000000-0000-0000-0000-000000000000"));
 
-    var requiredRdl = new cdp4common.sitedirectorydata.ModelReferenceDataLibrary();
+    ModelReferenceDataLibrary requiredRdl = new cdp4common.sitedirectorydata.ModelReferenceDataLibrary();
     requiredRdl.setIid(UUID.fromString("00000000-0000-0000-0000-000000000000"));
-    var person = new Person();
+    Person person = new Person();
     person.setShortName("admin");
     person.setIid(UUID.randomUUID());
     person.setContainer(this.siteDirectoryData);
-    var participant = new Participant(UUID.randomUUID(), cache, this.credentials.getUri());
+    Participant participant = new Participant(UUID.randomUUID(), cache, this.credentials.getUri());
     participant.setPerson(person);
     participant.getDomain().add(domain);
     modelSetup.getParticipant().add(participant);
 
-    var iterationPojo = new cdp4common.engineeringmodeldata.Iteration(iterationIid, cache,
+    cdp4common.engineeringmodeldata.Iteration iterationPojo = new cdp4common.engineeringmodeldata.Iteration(iterationIid, cache,
         this.credentials.getUri());
     iterationPojo.setIterationSetup(iterationSetupPojo);
     model.getIteration().add(iterationPojo);
-    var iteration = (Iteration) iterationPojo.toDto();
+    Iteration iteration = (Iteration) iterationPojo.toDto();
     model.setEngineeringModelSetup(modelSetup);
     this.siteDirectoryData.getModel().add(modelSetup);
     modelSetup.getRequiredRdl().add(requiredRdl);
@@ -284,9 +287,9 @@ class JsonFileDalTest {
     cache.put(new CacheKey(person.getIid(), this.siteDirectoryData.getIid()), person);
     this.siteDirectoryData.setCache(cache);
     iteration.setIterationSetup(iterationSetup.getIid());
-    var clone1 = iteration.deepClone(Iteration.class);
+    Iteration clone1 = iteration.deepClone(Iteration.class);
     operation = new Operation(iteration, clone1, OperationKind.UPDATE);
-    var operationContainers2 = Arrays.asList(new OperationContainer(
+    List<OperationContainer> operationContainers2 = Arrays.asList(new OperationContainer(
         "/EngineeringModel/" + model.getIid() + "/iteration/" + iteration.getIid(), 0));
     operationContainers2.stream().collect(MoreCollectors.onlyElement()).addOperation(operation);
 
